welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:36: error: value ++ is not a member of Int
    cote++
        ^Runner:39: error: value ++ is not a member of Int
  tour++
      ^